--- a/WorldOfWool/WorldOfWool.csproj
+++ b/WorldOfWool/WorldOfWool.csproj
@@ -113,7 +113,12 @@
     <None Include="WorldOfWool_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="imgMiniTapped.jpg" />
     <Content Include="Images\imgSheep.jpg" />
+    <Content Include="Images\imgSleep.jpg" />
+    <Content Include="Images\imgSleepSmile.jpg" />
+    <Content Include="Images\imgSmile.jpg" />
+    <Content Include="Images\imgTapped.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -137,6 +142,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
