--- a/WorldOfWool/WorldOfWool.csproj
+++ b/WorldOfWool/WorldOfWool.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Game.xaml.cs">
       <DependentUpon>Game.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Globalclass .cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
